# velox

./: CMakeLists.txt
velox/: CMakeLists.txt
velox/common/caching/: CachedFactory.h
velox/common/process/: TraceContext.cpp  TraceHistory.h
velox/connectors/hive/: FileHandle.cpp
velox/dwio/common/: DirectInputStream.cpp
velox/dwio/dwrf/reader/: ReaderBase.cpp
velox/examples/: MixedParallel.cpp  Sched.cpp
velox/hrp_benchmarks/: AvgBench.cpp  AvgCopyParallel.cpp  AvgFromFile.cpp  AvgParallel.cpp  AvgThreads.cpp  CMakeLists.txt  SchedExp.cpp  TpchExample.cpp  TpchGenerate.cpp  hrperf_api.h  plotSched.py  readme.md
